--- a/src/Screens/css/landingpagebody.css
+++ b/src/Screens/css/landingpagebody.css
@@ -1,5 +1,23 @@
 .landingPage-body{
     width:100%;
+    height:90%;
     position:absolute;
     top:10%;
+    left:0%;
+}
+.bg-pic{
+    width:100%;
+    height: 100%;
+}
+.to-admin{
+    width:5%;
+    text-align:center;
+    position:absolute;
+    top:0%;
+    right: 0%;
+    text-decoration: none;
+    color:black;
+    margin:1%;
+    border:2px solid black;
+    background-color:aqua;
 }
