--- a/src/Screens/css/ranks.css
+++ b/src/Screens/css/ranks.css
@@ -1,5 +1,6 @@
 .ranks-body{
     width:100%;
+    height:90%;
     position:absolute;
     top:10%;
     left:0%;
@@ -23,9 +24,9 @@
 
 .ranks-bg{
     width:100%;
+    height: 100%;
+    position:absolute;
+    top:0%;
+    left: 0%;
     opacity: 0.5;
-}
-.profile{
-    color:black;
-    text-decoration: none;
 }
