--- a/src/Screens/css/adminlogin.css
+++ b/src/Screens/css/adminlogin.css
@@ -13,11 +13,11 @@
 }
 
 .login{
-    width:30%;
-    height:60%;
+    width:40%;
+    height:75%;
     position:absolute;
     top:15%;
-    left:35%;
+    left:30%;
     border:2px solid black; 
     border-radius: 10px;    
     background-color:rgb(38, 165, 224);
@@ -25,18 +25,27 @@
 }
 
 .logininput{
-    margin-top: 15%;
+    margin-top: 7%;
     width: 65%;
     font-size:20px;
     margin-left: 20%;
 }
 
 .loginbutton{
-    margin-top:20%;
+    position:absolute;
+    bottom:5%;
     font-size:20px;
     margin-left:22%;
     width:50%;
     height:10%;
     background-color: #391283;
     box-shadow:0px 0px 20px 10px #391283;
+}
+
+.hint{
+    width:100%;
+    position:absolute;
+    left:0%;
+    text-align:center;
+    border-bottom: 2px solid black;
 }
