--- a/src/css/singlesuggestion.module.css
+++ b/src/css/singlesuggestion.module.css
@@ -1,10 +1,11 @@
 .card{
-    width: 100%;
-    height: 90px;
-    margin-top:5px;
-    margin-bottom:5px;
+    width: 95%;
+    height: 120px;
+    margin-top:7px;
+    margin-bottom:7px;
+    margin-left: 2.5%;
     border: 1px solid rgb(66, 58, 58);
-    box-shadow: 0px 0px 20px #888888;
+    box-shadow: 0px 0px 15px #888888;
     border-radius:10px;
     overflow: hidden;
 }
@@ -15,6 +16,12 @@
 }
 
 .content{
-    font-size:12px;
+    font-size:15px;
     margin-left: 10px;
+    margin-top:10px;
+}
+
+.defaultButton{
+    text-align:right;
+    margin-top:20px;
 }
