--- a/src/css/adminevent.module.css
+++ b/src/css/adminevent.module.css
@@ -23,5 +23,12 @@
 
 .action{
     width:100%;
-    text-align: center;
+    display: flex;
+    flex-direction:row-reverse;
+    margin-bottom: 5px;
+}
+
+.icon{
+    width:10px;
+    height:10px;
 }
