--- a/src/css/singleevent.module.css
+++ b/src/css/singleevent.module.css
@@ -1,14 +1,22 @@
 .card{
     width:95%;
-    margin-top:5%;
+    margin-bottom:5%;
     margin-left: 2.5%;
     height:100px;
     border:1px solid #ccc;
-    background-color:rgb(245, 233, 124);
+    background-color: #c1b4fc;;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgb(37, 37, 37);
+    color:black;
 }
 
 .element{
     font-size:15px;
+}
+
+
+.card:hover{
+    width: 100%;
+    height:140px;
+    margin-left: 0px;
 }
