--- a/src/css/singlesuggestion.module.css
+++ b/src/css/singlesuggestion.module.css
@@ -10,6 +10,14 @@
     overflow: hidden;
 }
 
+.card:hover{
+    width: 100%;
+    height:140px;
+    margin-left: 0px;
+    margin-top:0px;
+    margin-bottom:0px;
+}
+
 .title{
     font-size:20px;
     margin-left: 10px;
