--- a/src/css/singleevent.module.css
+++ b/src/css/singleevent.module.css
@@ -1,22 +1,24 @@
 .card{
-    width:95%;
-    margin-bottom:5%;
-    margin-left: 2.5%;
-    height:100px;
+    width:90%;
+    margin:5%;
     border:1px solid #ccc;
-    background-color: #c1b4fc;;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgb(37, 37, 37);
     color:black;
+    font-size:14px;
+    padding:10px;
 }
 
-.element{
-    font-size:15px;
-}
 
 
-.card:hover{
-    width: 100%;
-    height:140px;
-    margin-left: 0px;
+.joinbutton{
+background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 5px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
 }
