--- a/src/css/singlesuggestion.module.css
+++ b/src/css/singlesuggestion.module.css
@@ -1,25 +1,20 @@
 .card{
-    width: 95%;
+    max-width: 400px;
     margin-top:7px;
     margin-bottom:7px;
-    margin-left: 2.5%;
-    border: 1px solid rgb(66, 58, 58);
     box-shadow: 0px 0px 15px #888888;
     border-radius:10px;
     overflow: hidden;
+    padding:20px;
 }
 
-.card:hover{
-    width: 100%;
-    height:140px;
-    margin-left: 0px;
-    margin-top:0px;
-    margin-bottom:0px;
-}
 
 .title{
     font-size:20px;
     margin-left: 10px;
+    display:flex;
+    flex-direction: row;
+    width:100%; 
 }
 
 .content{
@@ -31,5 +26,4 @@
 .defaultButton{
     text-align:right;
     margin-top:10px;
-    background-color:bisque;
 }
