--- a/src/css/global.css
+++ b/src/css/global.css
@@ -6,3 +6,13 @@
     border: 2px solid black;
     height:400px;
 }
+
+.card:hover{
+    box-shadow: 0px 0px 10px gray;
+}
+
+.tr{
+    margin:'20px';
+    padding:'20px';
+
+}
