--- a/src/css/global.css
+++ b/src/css/global.css
@@ -25,3 +25,8 @@ button{
     background-color :blueviolet;
     box-shadow: 0px 0px 10px gray;
 }
+
+.btn:hover{
+    background-color:blueviolet;    
+    width:150px;
+}
